--- a/next_word.ipynb
+++ b/next_word.ipynb
@@ -6,7 +6,8 @@
       "name": "next_word.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5lH6EsW24j0n2cM9iPzvL"
+      "authorship_tag": "ABX9TyMUnLrSFPI8mlEoEyPTFWYY",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gnishimirwe/ML-DL-projects/blob/main/next_word.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
@@ -6251,6 +6262,46 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Predicting complete word**"
+      ],
+      "metadata": {
+        "id": "oNhyaVAMy93H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "3pjwv_2Wy8mp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Predicting from 1st letter**"
+      ],
+      "metadata": {
+        "id": "3hEQZlfMzPiH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Y_fQXlCczWnf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
